# vrc-manager

./: .gitignore  Cargo.toml  README.md  avatars.txt  config.toml.example
src/: config.rs  logging.rs  main.rs
src/discord_webhook/: mod.rs
src/events/: mod.rs
src/log_parser/: mod.rs
src/vrchat/: auth.rs  auto_ban.rs  auto_invite.rs  event_enricher.rs  log_avatar_id.rs  management.rs  mod.rs  util.rs
