[package]
name = "vrcautoban"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
dotenvy = "0.15.7"
once_cell = "1.21.3"
regex = "1.11.1"
reqwest = "0.12.18"
tokio = { version = "1.45.1", features = ["full"] }
url = "2.5.4"
urlencoding = "2.1.3"
vrchatapi = "1.19.4"

#[patch.crates-io]
#vrchatapi = { path = 'vrchatapi-rust' }

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
debug = false
strip = true

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
debug = false
strip = true
