[package]
name = "vrc-manager"
version = "0.1.5"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
notify = "8.1.0"
once_cell = "1.21.3"
rand = "0.9.1"
regex = "1.11.1"
reqwest = "0.12.18"
serde = "1.0.219"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
urlencoding = "2.1.3"
vrchatapi = "1.20.0"

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
debug = false
strip = true

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
debug = false
strip = true
